video player js

--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -35,30 +35,34 @@ block content
 			+slider-projects("https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
 
 			section.video-wrapper.fill-mini.snj-col-12
-				button.btn-circle.play-btn.circle-border-btn
+
+				button#open-video-btn.btn-circle.play-btn.circle-border-btn
 					.btn-c-init
 					+video-play-icon
 					.btn-c-hover
 					span Play
-				.video-overlay
-					video(src="")
-					button.btn-circle.pause-video.circle-border-btn
-						.btn-c-init
-						+video-pause-icon
 
-					button.btn-circle.close-video
+				.video-overlay#videoContainer
+					video#projectVideo(poster="../img/projects/coffee/9-coffee-mini.jpg" loop)
+						source(src="../img/projects/coffee/9-coffee-video.mp4" type="video/mp4")
+						//- Your browser does not support the video tag.
+					//- button.btn-circle.pause-video.circle-border-btn
+					//- 	.btn-c-init
+					//- 	+video-pause-icon
+
+					button#close-video-btn.btn-circle.close-video
 						+video-exit-icon
 						span.bg-btn
 
 					.timeline-controller.snj-container-fluid
 						.time-init.snj-col-3.snj-col-md-1
-							span.time-control 00.01.25
+							span#currentSecondsContainer.time-control 00.00
 							span.time-control.time-mobile /
-							span.time-control.time-mobile 00.01.25
-						.timeline-wrapper.snj-col-9.snj-col-md-10
-							.timeline
-								.bar-timeline
-						span.time-control.time-end.snj-col-md-1 00.01.25
+							span.time-control.time-mobile.videoDurationContainer 00.00
+						.progress-bar-wrapper.snj-col-9.snj-col-md-10
+							.progress-bar
+								.bar
+						span.time-control.time-end.snj-col-md-1.videoDurationContainer 00.00
 
 			//- footer
 			section.footer-project
