--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -36,13 +36,10 @@ block content
 					img(src="./img/projects/coffee/4-coffee-photo.jpg", alt="")
 			+slider-projects("./img/projects/coffee/5-coffee-slide.jpg", "./img/projects/coffee/6-coffee-slide.jpg", "./img/projects/coffee/7-coffee-slide.jpg", "./img/projects/coffee/8-coffee-slide.jpg", "", "", "", "")
 
-			section.video-wrapper.coffee-video-mini.snj-col-12
-				video(src="")
-				button.btn-circle
-					.btn-c-init
-					+video-play-icon
-					.btn-c-hover
-					span Play
+			//- video player
+			section.video-wrapper.fill-mini.snj-col-12
+				+video-player("../img/projects/coffee/9-coffee-mini.jpg","../img/projects/coffee/9-coffee-video.mp4")
+				
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
