--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -33,6 +33,7 @@ html(class='no-js')
 		include ../_modules/arrow-right.pug
 		include ../_modules/project-box-mixin.pug
 		include ../_modules/slider.pug
+		include ../_modules/video.pug
 
 		//- include ../_modules/grid-lines.pug
 		//- include ../_modules/grid-lines-full.pug
