--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -36,14 +36,8 @@ block content
 				.p-photo2
 					img(src="https://www.fillmurray.com/955/787", alt="")
 			+slider-projects("./img/projects/power-horse/5-power-slide.jpg", "./img/projects/power-horse/6-power-slide.jpg", "https://www.fillmurray.com/893/591", "https://www.fillmurray.com/893/591", "", "", "", "")
-			
-			section.video-wrapper.powerhorse-video-mini.snj-col-12
-				video(src="")
-				button.btn-circle
-					.btn-c-init
-					+video-play-icon
-					.btn-c-hover
-					span Play
+			section.video-wrapper.fill-mini.snj-col-12
+				+video-player("https://www.fillmurray.com/1920/787","../img/projects/power-horse/9-power-video.mp4")
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
