Cursor added. RAF added. Optimization of Video RAF pending, also there are elements that aren't reacting to cursor on hover.

--- a/dev/scss/global/_default.scss
+++ b/dev/scss/global/_default.scss
@@ -29,3 +29,12 @@ ul{
 		list-style: none;
 	}
 }
+
+canvas{
+	z-index: 9999;
+	pointer-events: none;
+
+	&.overlay{
+		mix-blend-mode: overlay;
+	}
+}
